# Finger

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  native-lib.h
app/src/main/java/com/linorz/finger/: DrawSurfaceView.java  MainActivity.java  NDKloader.java  StaticMethod.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
